fixing too big margin

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -14,7 +14,7 @@ $reddit: #ff4500;
 header{
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 5rem;
+    margin-bottom: 3rem;
     width: 100%;
     overflow: hidden;
     background-color: rgb(0, 0, 0);
